force-app/main/default/objects/SKP_Sync_Error__c/SKP_Sync_Error__c.object-meta.xml
<CustomObject>
    <label>Sync Error</label>
    <nameField>
        <displayFormat>SKPErr-{0000000}</displayFormat>
        <label>SKP Sync Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>