force-app/main/default/objects/SKP_Sync_Error__c/fields/Destination_System__c.field-meta.xml
<CustomField>
    <fullName>Destination_System__c</fullName>
    <label>Destination System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SKP</fullName>
                <default>true</default>
                <label>SKP</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>