force-app/main/default/objects/SKP_Sync_Error__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>