force-app/main/default/objects/SKP_Sync_Error__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <label>Error Description</label>
    <type>TextArea</type>
</CustomField>